# UTube-Music-Harvester

./: .env  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PRODUCTION.md  README.md  RELEASES.md  VOICE_COMMAND.md  pyproject.toml
.github/workflows/: ci.yml
src/utube/: __init__.py  cli.py  config.py  controller.py  extractor.py  gui.py  quality.py  services.py  storage.py  voice.py
src/utube/ui/: __init__.py  main.py  models.py  theme.py  workers.py
src/utube/ui/views/: __init__.py  library.py  player.py
src/utube_music_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_cli_extra.py  test_config.py  test_config_extra.py  test_controller.py  test_controller_extra.py  test_extractor.py  test_extractor_full.py  test_gui_coverage.py  test_gui_helpers.py  test_init_exports.py  test_quality.py  test_quality_extra.py  test_services.py  test_storage.py  test_storage_full.py  test_storage_integration.py  test_voice.py  test_voice_controller.py  test_voice_models.py  test_worker.py
